public/stylesheet.css
/* Main styling doc */


/* main colour #fbeaea */

/* font colour #b41919 */

/* 
Global styling
*/
body {
    background-color:  #fef6f6;
    color:  #222521 ;
}
html {
    scroll-behavior: smooth;
}
::-moz-selection { /* Code for Firefox */
    color: #b41919;
    background: #fbeaea;
  }
  
  ::selection {
    color: #b41919;
    background: #fbeaea;
  }

/* nav text styling */

nav {
    border-bottom: #b41919 2px solid;
}

/* Change burger menu color */
.navbar-custom .navbar-toggler-icon {
    background-image: url("data:image/svg+xml;charset=UTF8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='%23b41919' stroke-width='2' stroke-linecap='round' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
}

/* color of text and formatting */
.navbar-brand,.nav-link {
    position: relative;
    display: inline-block;
    color: #b41919; /* Navbar font colour */
    border-bottom: 2px solid transparent; /* Adding invisible border for spacing */
    transition: all 0.3s ease; /* Smooth transition for all properties */
}

/* Adding special font to main brand name */
.navbar-brand {
    font-family: "Playwrite IT Moderna", sans-serif;
}

/* After hover affect */
.navbar-brand::after, .nav-link::after {
    content: '';
    position: absolute;
    bottom: -2px; /* Slightly below the text */
    left: 0;
    width: 0;
    height: 2px;
    background-color: #b41919;
    transition: width 0.3s ease;
}

.navbar-brand:hover, .nav-link:hover {
    color: #8a1414 !important; /* Darker shade for visibility on hover */
}

.navbar-brand:hover::after, .nav-link:hover::after {
    width: 100%;
}



/* 
About tech styling
*/
.tech-container {
    text-align: center;
    font-family: Arial, sans-serif;
    margin-top: 15%;
}

.tech-row {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 20px;
    font-size: 1.2rem;
    margin-bottom: 15px;
}

.tech-row span {
    display: flex;
    align-items: center;
    gap: 2%;
    padding: 10px 15px;
    border-radius: 20px;
    transition: all 0.3s ease-in-out;
}

.tech-row span:hover {
    background-color: rgba(255, 255, 255, 0.1);
    box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
    border-radius: 25px;
}

i {
    font-size: 1.5rem;
}

.tools-frameworks-header{
    margin-top: 6%;
}

/* 
Certification styling 
*/
.Certification-row span {
    display: flex;
    flex-direction: column; /* Stack vertically */
    align-items: center;
    gap: 10px;
    padding: 10px 15px;
    border-radius: 20px;
    transition: all 0.3s ease-in-out;
    position: relative; /* Needed for hover effect */
}

.Credly {
    text-decoration: none;
    color: #222521;
    position: relative; /* Make underline relative to this element */
}

.Credly::after {
    content: '';
    position: absolute;
    bottom: -2px; /* Slightly below the text */
    left: 0;
    width: 0;
    height: 2px;
    background-color: #b41919;
    transition: width 0.3s ease;
}

.Credly:hover::after {
    width: 100%;
}


/*
project styling
*/

/* Header */
.my-projects-header {
    margin-bottom: 3%;
}

/* Primary text color */
.text-primary {
    color: #222521  !important;
}

/* List group items (the clickable buttons) */
.list-group-item {
    transition: all 0.3s ease-in-out;
    background-color: #ffcaca;
    border: 2px solid #b41919 !important;
    margin: 0.5%;
    margin-bottom: 10px;
    color: #b41919; /* Light text */
}

/* Hover effect for entire button and text */
.list-group-item:hover {
    background-color: #b41919; /* Light green background */
    color: #ffcaca !important; /* Dark text on hover */
    cursor: pointer;
}

/* Link button colouring e.g navbar font */
.project-link,
.experience-link {
    text-decoration: none !important;
}




/* Content area animation */
#project-content , #experience-content{
    min-height: 300px;
    padding: 20px;
    border-radius: 10px;
    background:  #fef6f6 ;
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
    border-radius: 5%;
    margin-bottom: 5%;
}

.project-container, .experience-container{
    margin-top: 20% !important;
}


/*
About page styling
*/
.profile-image {
    object-fit: cover; /* Crop the image to fit */
    width: 100%;
    margin-bottom: 4%;
}



/*
contact styling
*/
.contact-header{
    margin-top: 15%;
}


/*
experience_1 styling
*/
.content-container-img{
    padding: 5%;
    border-radius: 10px;
}
.logo-img {
    max-width: 40%; /* Scales dynamically */
    border-radius: 10px;
    margin-right: 5%;
    margin-bottom: 5%;
    height: auto;
}
.bottom-image {
    width: 100%;
    height: auto;
    border-radius: 10px;
}



/*
Project 3 styling
*/
/* Styling for lists with no bullets but indented items */
ul.no-bullets {
    list-style-type: none; /* Remove bullets */
    padding-left: 20px; /* Indent list items */
}

ul.no-bullets li {
    margin-bottom: 5px; /* Optional: adds space between list items */
    font-size: 16px; /* Customize font size */
}

/* 
contact styling
*/
.contact-container{
    margin-bottom: 10%;
    min-height: 200px;
    padding: 20px;
    border-radius: 10px;
    background:  #fef6f6 ;
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
    border-radius: 5%;
}

.icon-link {
    position: relative;
    display: inline-block;
    color: #b41919; /* Icon color */
    text-decoration: none; /* Remove default underline */
    width: 100%; /* Take full width of container */
    text-align: center; /* Center the icon */
}

.icon-link i {
    transition: color 0.3s ease;
    display: inline-block; /* Ensure proper alignment */
    width: 48px; /* Fixed width for consistent alignment */
    text-align: center; /* Center the icon within its fixed width */
}

/* Underline Effect */
.icon-link::after {
    content: '';
    position: absolute;
    bottom: -5px; /* Adjust for spacing */
    left: 0;
    width: 0;
    height: 2px; /* Thickness of underline */
    background-color: #222521; /* Underline color */
    transition: width 0.3s ease; /* Smooth transition */
}

.icon-link:hover i {
    color: #222521; /* Change icon color on hover */
}

.icon-link:hover::after {
    width: 100%; /* Expand underline to full width */
}

.footer-text
{
    color: #b41919;
}

footer {
    border-top: #b41919 2px solid;
}

* {
  box-sizing: border-box;
}

.loader-container {
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 12px;
    height : 100vh;
    display: flex;
}

.book-background {
  background: #b41919;
  
}

.book-h1 {
  color: #ffcaca;
  text-align: center;
  font-family: sans-serif;
  text-transform: uppercase;
  font-size: 20px;
  position: relative;
}

.book-h1:after {
  position: absolute;
  content: "";
  -webkit-animation: Dots 2s cubic-bezier(0, .39, 1, .68) infinite;
  animation: Dots 2s cubic-bezier(0, .39, 1, .68) infinite;
}

.loader {
  margin: 5% auto 30px;
}

.book {
  border: 4px solid #ffcaca;
  width: 60px;
  height: 45px;
  position: relative;
  perspective: 150px;
}

.page {
  display: block;
  width: 30px;
  height: 45px;
  border: 4px solid #ffcaca;
  border-left: 1px solid #ffcaca;
  margin: 0;
  position: absolute;
  right: -4px;
  top: -4px;
  overflow: hidden;
  background: #ffcaca;
  transform-style: preserve-3d;
  -webkit-transform-origin: left center;
  transform-origin: left center;
}

.book .page:nth-child(1) {
  -webkit-animation: pageTurn 1.2s cubic-bezier(0, .39, 1, .68) 1.6s infinite;
  animation: pageTurn 1.2s cubic-bezier(0, .39, 1, .68) 1.6s infinite;
}

.book .page:nth-child(2) {
  -webkit-animation: pageTurn 1.2s cubic-bezier(0, .39, 1, .68) 1.45s infinite;
  animation: pageTurn 1.2s cubic-bezier(0, .39, 1, .68) 1.45s infinite;
}

.book .page:nth-child(3) {
  -webkit-animation: pageTurn 1.2s cubic-bezier(0, .39, 1, .68) 1.2s infinite;
  animation: pageTurn 1.2s cubic-bezier(0, .39, 1, .68) 1.2s infinite;
}


/* Page turn */

@-webkit-keyframes pageTurn {
  0% {
    -webkit-transform: rotateY( 0deg);
    transform: rotateY( 0deg);
  }
  20% {
    background: #8a1414 ;
  }
  40% {
    background: #b41919;
    -webkit-transform: rotateY( -180deg);
    transform: rotateY( -180deg);
  }
  100% {
    background: #b41919;
    -webkit-transform: rotateY( -180deg);
    transform: rotateY( -180deg);
  }
}

@keyframes pageTurn {
  0% {
    transform: rotateY( 0deg);
  }
  20% {
    background: #8a1414;
  }
  40% {
    background: #b41919;
    transform: rotateY( -180deg);
  }
  100% {
    background: #b41919;
    transform: rotateY( -180deg);
  }
}


/* Dots */

@-webkit-keyframes Dots {
  0% {
    content: "";
  }
  33% {
    content: ".";
  }
  66% {
    content: "..";
  }
  100% {
    content: "...";
  }
}

@keyframes Dots {
  0% {
    content: "";
  }
  33% {
    content: ".";
  }
  66% {
    content: "..";
  }
  100% {
    content: "...";
  }
}

